# resources/views/pages/plp.blade.php
@@ -8,39 +8,28 @@
 
                 <div class="row">
                     <div class="col-lg-3 col-md-3 order-md-1 order-2 small-mt__40">
-                        <div class="shop-widget widget-shop-publishers mt-3">
+                        <div class="shop-widget widget-shop-styles mt-3">
                             <div class="product-filter">
-                                <h6 class="mb-20">Publishers</h6>
-                                <select class="_filter form-select form-select-sm" name="_publisher" onchange="getData()">
-                                    <option value="" selected>All</option>
-                                    <option value="putnam">Putnam</option>
-                                    <option value="harriman house">Harriman House</option>
-                                    <option value="balai pustaka">Balai Pustaka</option>
-                                    <option value="lentera dipantara">Lentera Dipantara</option>
-                                    <option value="pan desks">Pan Desks</option>
-                                    <option value="firefly desks">Firefly Desks</option>
-                                    <option value="gramedia">Gramedia</option>
-                                    <option value="scholastic">Scholastic</option>
-                                    <option value="harper">Harper</option>
-                                    <option value="dk children">DK Children</option>
-                                    <option value="bentang pustaka">Bentang Pustaka</option>
-                                    <option value="gagas media">Gagas Media</option>
-                                    <option value="grasindo">Grasindo</option>
-                                    <option value="marjin kiri">Marjin Kiri</option>
+                                <h6 class="mb-20">Product</h6>
+                                <select class="_filter form-select form-select-sm" name="_style" onchange="getData()">
+                                    <option value="" selected>Filter</option>
+                                    <option value="Artistic Line">Artistic Line</option>
+                                    <option value="Basic Line">Basic Line</option>
+                                    <option value="Collaboration Line">Collaboration Line</option>
+                                    <option value="Mousepad">Mousepad</option>
+                                    <option value="Mini Scrollworks">Mini Scrollworks</option>
+                                    <option value="Styles">Styles</option>
                                 </select>
                             </div>
                         </div>
                         <!-- Product Filter -->
                         <div class="shop-widget widget-color">
                             <div class="product-filter">
-                                <h6 class="mb-20">Color</h6>
+                                <h6 class="mb-20">Availability</h6>
                                 <ul class="widget-nav-list">
-                                    <li><a href="#"><span class="swatch-color black"></span></a></li>
-                                    <li><a href="#"><span class="swatch-color green"></span></a></li>
-                                    <li><a href="#"><span class="swatch-color grey"></span></a></li>
-                                    <li><a href="#"><span class="swatch-color red"></span></a></li>
-                                    <li><a href="#"><span class="swatch-color white"></span></a></li>
-                                    <li><a href="#"><span class="swatch-color yellow"></span></a></li>
+                                    <li><a href="#">In Stock</a></li>
+                                    <li><a href="#">Out of stock</a></li>
+
                                 </ul>
                             </div>
                         </div>
@@ -63,23 +52,23 @@
                                 <h6 class="mb-20">Tags</h6>
                                 <div class="blog-tagcloud">
                                     <a href="#" class="selected">Desk</a>
-                                    <a href="#">EDesk</a>
-                                    <a href="#">Best Seller</a>
-                                    <a href="#">Fiction</a>
-                                    <a href="#">Education</a>
-                                    <a href="#">Literature</a>
-                                    <a href="#">Classics</a>
-                                    <a href="#">Real Event</a>
-                                    <a href="#">Young Adult</a>
-                                    <a href="#">Religion</a>
-                                    <a href="#">Health</a>
-                                    <a href="#">Comic</a>
-                                    <a href="#">Horror</a>
-                                    <a href="#">Poem</a>
-                                    <a href="#">Filmed</a>
-                                    <a href="#">Encyclopedia</a>
-                                    <a href="#">In English</a>
-                                    <a href="#">In Indonesian</a>
+                                    <a href="#">Tenjin</a>
+                                    <a href="#">Scrollworks</a>
+                                    <a href="#">Mousepad</a>
+                                    <a href="#">Deskmat</a>
+                                    <a href="#">Byakko</a>
+                                    <a href="#">Kisetsu</a>
+                                    <a href="#">Raijuu</a>
+                                    <a href="#">Kikko</a>
+                                    <a href="#">Asanoha</a>
+                                    <a href="#">Kamon</a>
+                                    <a href="#">Tengaiha</a>
+                                    <a href="#">Kunai</a>
+                                    <a href="#">Kansha</a>
+                                    <a href="#">Raijin</a>
+                                    <a href="#">Faith</a>
+                                    <a href="#">Iso</a>
+                                    <a href="#">Sapphire</a>
                                 </div>
                             </div>
                         </div>
@@ -111,7 +100,7 @@
                                     <div class="header-search-box">
                                         <input class="_filter search-field" name="_search" type="text" 
                                             onkeypress="getDataOnEnter(event)"
-                                            placeholder="Search by title or author...">
+                                            placeholder="Search by product...">
                                         <button class="search-icon"><i class="icon-magnifier"></i></button>
                                     </div>
                                 </div>
